# Diligent

./: .gitignore  README.md
Diligent/: .gitignore  LICENSE  README.md  pyproject.toml
Diligent/diligent/: __main__.py  cli.py
Diligent/diligent/commands/: artifact_cmd.py  config_cmd.py  doctor.py  handoff_cmd.py  init_cmd.py  install_cmd.py  migrate_cmd.py  question_cmd.py  reconcile_cmd.py  sources_cmd.py  status_cmd.py  task_cmd.py  truth_cmd.py  workstream_cmd.py
Diligent/diligent/helpers/: artifact_scanner.py  clipboard.py  diff_docx.py  diff_excel.py  editor.py  formatting.py  io.py  numeric.py  reconcile_anchors.py  time_utils.py
Diligent/diligent/skills/: __init__.py  dd_artifacts.md  dd_next.md  dd_questions.md  dd_sources.md  dd_start.md  dd_status.md  dd_truth.md  dd_workstreams.md
Diligent/diligent/state/: artifacts.py  config.py  deal.py  models.py  (+5 more)
Diligent/tests/: conftest.py  test_artifact_cmd.py  test_artifact_scanner.py  test_artifacts_state.py  test_atomic_write.py  test_cli_startup.py  test_clipboard.py  test_config.py  test_diff_excel.py  test_doctor.py  test_handoff_cmd.py  test_ingest.py  test_init.py  test_install_cmd.py  test_json_output.py  test_license.py  test_models.py  test_no_network.py  test_no_prompts.py  test_performance.py  test_question_cmd.py  test_questions_state.py  test_reconcile.py  test_reconcile_engine.py  test_sources_cmd.py  test_sources_diff.py  test_state_roundtrip.py  test_status_cmd.py  test_task_cmd.py  test_templates.py  test_time_utils.py  test_truth_cmd.py  test_verification_gate.py  test_workstream_cmd.py
(+109 files in other folders)
